src/zmapParser.py
# Generated from /Users/rileypb/dev/zmap/src/zmap.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from map import *




class zmapParser ( Parser ):

    grammarFileName = "zmap.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'('", "')'", "'\n'", "<INVALID>", 
                     "<INVALID>", "'?'", "'*'", "'-->'", "'<--'", "'<->'", 
                     "'['", "']'", "'n'", "'ne'", "'e'", "'se'", "'s'", 
                     "'sw'", "'w'", "'nw'", "'u'", "'d'", "'<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "LPAREN", "RPAREN", "NL", 
                      "DIRECTION", "NAME", "QUESTION", "STAR", "LARROW", 
                      "RARROW", "BARROW", "LBRACK", "RBRACK", "N", "NE", 
                      "E", "SE", "S", "SW", "W", "NW", "U", "D", "CLOSE" ]

    RULE_parse = 0
    RULE_ifmap = 1
    RULE_passage = 2
    RULE_comment = 3
    RULE_room = 4
    RULE_modifier = 5
    RULE_name = 6
    RULE_directed_arrow = 7
    RULE_larrow = 8
    RULE_rarrow = 9
    RULE_barrow = 10
    RULE_left_direction = 11
    RULE_right_direction = 12
    RULE_arrow = 13
    RULE_unknown = 14
    RULE_special = 15

    ruleNames =  [ "parse", "ifmap", "passage", "comment", "room", "modifier", 
                   "name", "directed_arrow", "larrow", "rarrow", "barrow", 
                   "left_direction", "right_direction", "arrow", "unknown", 
                   "special" ]

    EOF = Token.EOF
    T__0=1
    LPAREN=2
    RPAREN=3
    NL=4
    DIRECTION=5
    NAME=6
    QUESTION=7
    STAR=8
    LARROW=9
    RARROW=10
    BARROW=11
    LBRACK=12
    RBRACK=13
    N=14
    NE=15
    E=16
    SE=17
    S=18
    SW=19
    W=20
    NW=21
    U=22
    D=23
    CLOSE=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifmap(self):
            return self.getTypedRuleContext(zmapParser.IfmapContext,0)


        def EOF(self):
            return self.getToken(zmapParser.EOF, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = zmapParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.ifmap()
            self.state = 33
            self.match(zmapParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfmapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def passage(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.PassageContext)
            else:
                return self.getTypedRuleContext(zmapParser.PassageContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.CommentContext)
            else:
                return self.getTypedRuleContext(zmapParser.CommentContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(zmapParser.NL)
            else:
                return self.getToken(zmapParser.NL, i)

        def getRuleIndex(self):
            return zmapParser.RULE_ifmap

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfmap" ):
                listener.enterIfmap(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfmap" ):
                listener.exitIfmap(self)




    def ifmap(self):

        localctx = zmapParser.IfmapContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ifmap)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [zmapParser.LBRACK]:
                    self.state = 35
                    self.passage()
                    pass
                elif token in [zmapParser.T__0]:
                    self.state = 36
                    self.comment()
                    pass
                elif token in [zmapParser.NL]:
                    self.state = 37
                    self.match(zmapParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << zmapParser.T__0) | (1 << zmapParser.NL) | (1 << zmapParser.LBRACK))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PassageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def room(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zmapParser.RoomContext)
            else:
                return self.getTypedRuleContext(zmapParser.RoomContext,i)


        def directed_arrow(self):
            return self.getTypedRuleContext(zmapParser.Directed_arrowContext,0)


        def NL(self):
            return self.getToken(zmapParser.NL, 0)

        def EOF(self):
            return self.getToken(zmapParser.EOF, 0)

        def unknown(self):
            return self.getTypedRuleContext(zmapParser.UnknownContext,0)


        def modifier(self):
            return self.getTypedRuleContext(zmapParser.ModifierContext,0)


        def special(self):
            return self.getTypedRuleContext(zmapParser.SpecialContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_passage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPassage" ):
                listener.enterPassage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPassage" ):
                listener.exitPassage(self)




    def passage(self):

        localctx = zmapParser.PassageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_passage)
        self._la = 0 # Token type
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.room()
                self.state = 43
                self.directed_arrow()
                self.state = 46
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [zmapParser.LBRACK]:
                    self.state = 44
                    self.room()
                    pass
                elif token in [zmapParser.QUESTION]:
                    self.state = 45
                    self.unknown()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==zmapParser.CLOSE:
                    self.state = 48
                    self.modifier()


                self.state = 51
                _la = self._input.LA(1)
                if not(_la==zmapParser.EOF or _la==zmapParser.NL):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.room()
                self.state = 54
                self.directed_arrow()
                self.state = 55
                self.special()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==zmapParser.CLOSE:
                    self.state = 56
                    self.modifier()


                self.state = 59
                _la = self._input.LA(1)
                if not(_la==zmapParser.EOF or _la==zmapParser.NL):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(zmapParser.NL)
            else:
                return self.getToken(zmapParser.NL, i)

        def EOF(self):
            return self.getToken(zmapParser.EOF, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = zmapParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(zmapParser.T__0)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << zmapParser.T__0) | (1 << zmapParser.LPAREN) | (1 << zmapParser.RPAREN) | (1 << zmapParser.DIRECTION) | (1 << zmapParser.NAME) | (1 << zmapParser.QUESTION) | (1 << zmapParser.STAR) | (1 << zmapParser.LARROW) | (1 << zmapParser.RARROW) | (1 << zmapParser.BARROW) | (1 << zmapParser.LBRACK) | (1 << zmapParser.RBRACK) | (1 << zmapParser.N) | (1 << zmapParser.NE) | (1 << zmapParser.E) | (1 << zmapParser.SE) | (1 << zmapParser.S) | (1 << zmapParser.SW) | (1 << zmapParser.W) | (1 << zmapParser.NW) | (1 << zmapParser.U) | (1 << zmapParser.D) | (1 << zmapParser.CLOSE))) != 0):
                self.state = 64
                _la = self._input.LA(1)
                if _la <= 0 or _la==zmapParser.NL:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            _la = self._input.LA(1)
            if not(_la==zmapParser.EOF or _la==zmapParser.NL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(zmapParser.LBRACK, 0)

        def name(self):
            return self.getTypedRuleContext(zmapParser.NameContext,0)


        def RBRACK(self):
            return self.getToken(zmapParser.RBRACK, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_room

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoom" ):
                listener.enterRoom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoom" ):
                listener.exitRoom(self)




    def room(self):

        localctx = zmapParser.RoomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_room)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(zmapParser.LBRACK)
            self.state = 73
            self.name()
            self.state = 74
            self.match(zmapParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLOSE(self):
            return self.getToken(zmapParser.CLOSE, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_modifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifier" ):
                listener.enterModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifier" ):
                listener.exitModifier(self)




    def modifier(self):

        localctx = zmapParser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_modifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(zmapParser.CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(zmapParser.NAME, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = zmapParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(zmapParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Directed_arrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def left_direction(self):
            return self.getTypedRuleContext(zmapParser.Left_directionContext,0)


        def larrow(self):
            return self.getTypedRuleContext(zmapParser.LarrowContext,0)


        def barrow(self):
            return self.getTypedRuleContext(zmapParser.BarrowContext,0)


        def right_direction(self):
            return self.getTypedRuleContext(zmapParser.Right_directionContext,0)


        def rarrow(self):
            return self.getTypedRuleContext(zmapParser.RarrowContext,0)


        def getRuleIndex(self):
            return zmapParser.RULE_directed_arrow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirected_arrow" ):
                listener.enterDirected_arrow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirected_arrow" ):
                listener.exitDirected_arrow(self)




    def directed_arrow(self):

        localctx = zmapParser.Directed_arrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_directed_arrow)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.left_direction()
                self.state = 81
                self.larrow()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.left_direction()
                self.state = 84
                self.barrow()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==zmapParser.DIRECTION:
                    self.state = 85
                    self.right_direction()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.barrow()
                self.state = 89
                self.right_direction()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.rarrow()
                self.state = 92
                self.right_direction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LarrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LARROW(self):
            return self.getToken(zmapParser.LARROW, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_larrow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLarrow" ):
                listener.enterLarrow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLarrow" ):
                listener.exitLarrow(self)




    def larrow(self):

        localctx = zmapParser.LarrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_larrow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(zmapParser.LARROW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RarrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RARROW(self):
            return self.getToken(zmapParser.RARROW, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_rarrow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRarrow" ):
                listener.enterRarrow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRarrow" ):
                listener.exitRarrow(self)




    def rarrow(self):

        localctx = zmapParser.RarrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rarrow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(zmapParser.RARROW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BarrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BARROW(self):
            return self.getToken(zmapParser.BARROW, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_barrow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBarrow" ):
                listener.enterBarrow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBarrow" ):
                listener.exitBarrow(self)




    def barrow(self):

        localctx = zmapParser.BarrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_barrow)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(zmapParser.BARROW)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Left_directionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIRECTION(self):
            return self.getToken(zmapParser.DIRECTION, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_left_direction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeft_direction" ):
                listener.enterLeft_direction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeft_direction" ):
                listener.exitLeft_direction(self)




    def left_direction(self):

        localctx = zmapParser.Left_directionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_left_direction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(zmapParser.DIRECTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Right_directionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIRECTION(self):
            return self.getToken(zmapParser.DIRECTION, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_right_direction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRight_direction" ):
                listener.enterRight_direction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRight_direction" ):
                listener.exitRight_direction(self)




    def right_direction(self):

        localctx = zmapParser.Right_directionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_right_direction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(zmapParser.DIRECTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LARROW(self):
            return self.getToken(zmapParser.LARROW, 0)

        def RARROW(self):
            return self.getToken(zmapParser.RARROW, 0)

        def BARROW(self):
            return self.getToken(zmapParser.BARROW, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_arrow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrow" ):
                listener.enterArrow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrow" ):
                listener.exitArrow(self)




    def arrow(self):

        localctx = zmapParser.ArrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arrow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << zmapParser.LARROW) | (1 << zmapParser.RARROW) | (1 << zmapParser.BARROW))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnknownContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION(self):
            return self.getToken(zmapParser.QUESTION, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_unknown

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnknown" ):
                listener.enterUnknown(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnknown" ):
                listener.exitUnknown(self)




    def unknown(self):

        localctx = zmapParser.UnknownContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_unknown)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(zmapParser.QUESTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(zmapParser.STAR, 0)

        def LPAREN(self):
            return self.getToken(zmapParser.LPAREN, 0)

        def name(self):
            return self.getTypedRuleContext(zmapParser.NameContext,0)


        def RPAREN(self):
            return self.getToken(zmapParser.RPAREN, 0)

        def getRuleIndex(self):
            return zmapParser.RULE_special

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecial" ):
                listener.enterSpecial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecial" ):
                listener.exitSpecial(self)




    def special(self):

        localctx = zmapParser.SpecialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_special)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(zmapParser.STAR)
            self.state = 111
            self.match(zmapParser.LPAREN)
            self.state = 112
            self.name()
            self.state = 113
            self.match(zmapParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





